[update] jdk 17 code improvement